@@ -106,6 +106,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 9397) Introduce "sp-contributions-footer" and "sp-contributions-footer-anon"
   messages, shown at the end of Special:Contributions as appropriate for the target
 * (bug 8421) Expose current action in JavaScript globals (as 'wgAction')
+* (bug 9069) Use galleries in query pages dedicated to images
 
 == Bugfixes since 1.9 ==
 * (bug 7292) Fix site statistics when moving pages in/out of content namespaces
